--- a/templates/example.yaml
+++ b/templates/example.yaml
@@ -14,3 +14,6 @@ checks:
     value: WordPress
   - type: title
     value: "Example Domain"
+  - type: url
+    value: "https://example.com/123/"
+
